Revert "使子进程正确输出颜色"
This reverts commit d58290449614a1f84592e372dd11ef5c1c3b072d.